Correct button face color problem on Firefox Linux (hover) & iPhone 8

--- a/src/remember-source/RememberSongs.css
+++ b/src/remember-source/RememberSongs.css
@@ -17,6 +17,7 @@ button {
     border-width: .19230769em;
     font-family: inherit;
     font-stretch: ultra-expanded;
+    background-color: rgb(244,244,244);
 }
 button:focus {
     outline-style: dotted;
